--- a/gym.html
+++ b/gym.html
@@ -17,8 +17,7 @@
                 </a>
                 <div class="icons">
                     <a href="about.html"><img src="assets/icons/question.png"></a>
-                    <a><img src="assets/icons/notifications.png"></a>
-                    <a><img src="assets/icons/settings.png"></a>
+                    <button><img src="assets/icons/notifications.png"></button>
                 </div>
             </div>
         </header>
@@ -70,24 +69,22 @@
                                 </div>
                             </div>
                             <div class="overlay" id='edit-workout-monday'>
-                                <div class="overlay-container">
+                                <form class="overlay-container" id="workoutForm">
+                                    
                                     <div class="close-overlay">
-                                        <button onclick="closeOverlay('edit-workout-monday')" class="close-overlay-btn">
+                                        <button type="button" onclick="closeOverlay('edit-workout-monday')" class="close-overlay-btn">
                                             X
                                         </button>
                                     </div>
+
                                     <div class="overlay-container-content">
+
                                         <div id="overlay-gym-general-forms">
+
                                             <div class="overlay-container-content-gym-form">
-                                                <div class="close-gym-form">
-                                                    <button onclick="removeForm(this)">
-                                                        -
-                                                    </button>
-                                                </div>
-                                                <select aria-placeholder="Muscle Group" class="overlay-container-content-gym-form-title">
-                                                    <option disabled selected hidden>
-                                                        Muscle Group:
-                                                    </option>
+
+                                                <select name="muscle_group[]" class="overlay-container-content-gym-form-title" required>
+                                                    <option disabled selected hidden>Muscle Group:</option>
                                                     <option>Chest</option>
                                                     <option>Back</option>
                                                     <option>Triceps</option>
@@ -103,35 +100,36 @@
                                                     <option>Abductors</option>
                                                     <option>Abs</option>
                                                 </select>
+
                                                 <div class="gymExercisesContainer">
-                                                    <div class="overlay-container-content-gym-exercises">
-                                                        <form action="">
-                                                            <input class="gym-sets" type="number" placeholder="Set:" autocomplete="off" >
-                                                            <span>x</span>
-                                                            <input class="gym-reps" type="number" placeholder="Rep:">
-                                                            <input class="gym-exercise" type="text" placeholder="Exercise:" autocomplete="off">
-                                                        </form>
-                                                        <button type="button" onclick="removeGymRowByButton(this)">
-                                                            -
-                                                        </button>
-                                                        <button type="button" onclick="addGymRowByButton(this)">
-                                                            +
-                                                        </button>
+
+                                                    <div class="overlay-container-content-gym-exercises gym-row">
+                                                        <input name="sets[]" class="gym-sets" type="number" placeholder="Set" required min="1">
+                                                        <span>x</span>
+                                                        <input name="reps[]" class="gym-reps" type="number" placeholder="Rep" required min="1">
+                                                        <input name="exercise[]" class="gym-exercise" type="text" placeholder="Exercise" required>
+
+                                                        <button type="button" class="btn-less-plus" onclick="removeGymRowByButton(this)">-</button>
+                                                        <button type="button" class="btn-less-plus" onclick="addGymRowByButton(this)">+</button>
                                                     </div>
+
                                                 </div>
                                             </div>
                                         </div>
-                                        
-                                        <button onclick="addNewForm()" class="btn-add">
+
+                                        <button type="button" onclick="addNewForm()" class="btn-add">
                                             Add
                                         </button>
+
                                     </div>
+
                                     <div class="overlay-container-content-save">
-                                        <button class="btn-save">
+                                        <button type="submit" class="btn-save">
                                             Save
                                         </button>
-                                    </div>  
-                                </div>
+                                    </div>
+
+                                </form>
                             </div>
                         </div>
                         <div  class="specific-gym-days">
