--- a/user.html
+++ b/user.html
@@ -17,8 +17,7 @@
                 </a>
                 <div class="icons">
                     <a href="about.html"><img src="assets/icons/question.png"></a>
-                    <a><img src="assets/icons/notifications.png"></a>
-                    <a><img src="assets/icons/settings.png"></a>
+                    <button><img src="assets/icons/notifications.png"></button>
                 </div>
             </div>
         </header>
@@ -49,14 +48,17 @@
                         <div>
                             <label for="account-config-username">Username</label>
                             <input id="account-config-username" class="user-input" type="text" value="USERNAME" readonly >
+                            <p class="change-user">Change Username</p>
                         </div>
                         <div>
                             <label for="account-config-email"> Email</label>
                             <input id="account-config-email" class="user-input" type="email" value="USERNAME@gmail.com" readonly>
+                            <p class="change-user">Change Email</p>
                         </div>
                         <div>
                             <label for="account-config-password">Password</label>
                             <input id="account-config-password" class="user-input" type="password" value="Password" readonly>
+                            <p class="change-user">Change Password</p>
                         </div>
                         <button id="btn-logout"> Logout </button>
                     </div>
