--- a/about.html
+++ b/about.html
@@ -16,9 +16,8 @@
                     <h1>Manage Your Life</h1>
                 </a>
                 <div class="icons">
-                    <a><img src="assets/icons/question.png"></a>
-                    <a><img src="assets/icons/notifications.png"></a>
-                    <a><img src="assets/icons/settings.png"></a>
+                    <a href="about.html"><img src="assets/icons/question.png"></a>
+                    <button><img src="assets/icons/notifications.png"></button>
                 </div>
             </div>
         </header>
