--- a/tasks.html
+++ b/tasks.html
@@ -58,7 +58,7 @@
                                     </h4>
                                     <div onclick="openOverlay('pendent-task-overlay')" class="specific-tasks-main-today-now-pendent">
                                         PENDENT TASK
-                                        <p>pendent task description</p>
+                                        <p class="specific-tasks-main-today-now-pendent-description">pendent task description aodfkasdfapodkfapofodpodfopasdofasdofkaodfkapdafsdddddddddddddddddddddddddddddddddddddddddddddd</p>
                                         <p>10:00</p>
                                     </div>
                                     <button class="btn-save">
@@ -179,7 +179,7 @@
                         </div>
                     </div>
                     <div class="specific-tasks-future">
-                        <div class="specific-tasks-future-card" href="">
+                        <div id="daily-tasks" class="specific-tasks-future-card">
                             <h3 class="specific-tasks-title">
                                 Daily Tasks
                             </h3>
@@ -198,7 +198,7 @@
                                 <p>- Task </p>
                             </div>
                         </div>
-                        <div class="specific-tasks-future-card" href="">
+                        <div id="others-tasks" class="specific-tasks-future-card" >
                             <h3 class="specific-tasks-title">
                                 Others Tasks
                             </h3>
@@ -217,7 +217,7 @@
                                 <p>- Task </p>
                             </div>
                         </div>
-                        <div class="specific-tasks-future-card" href="">
+                        <div id="daily-tasks" class="specific-tasks-future-card">
                             <h3 class="specific-tasks-title">
                                 Passed Tasks
                             </h3>
