--- a/finance.html
+++ b/finance.html
@@ -210,6 +210,7 @@
                                     
                                     <div onclick="cardSelector('nubank-accounts',this)" id="nubank" class="self-card active">
                                         Nubank
+                                        <button class="btn-little-less-white">-</button>
                                     </div>
                                     <div onclick="cardSelector('inter-accounts',this)" id="inter" class="self-card">
                                         Inter
@@ -439,27 +440,27 @@
                             <div class="finance-duties-self">
                                 <input class="checkbox" type="checkbox">
                                 <p>Duty 1</p>   
-                                <button class="btn-little-less">-</button>
+                                <button class="btn-little-less-black">-</button>
                             </div>
                             <div class="finance-duties-self">
                                 <input class="checkbox" type="checkbox">
                                 <p>Duty 1</p>
-                                <button class="btn-little-less">-</button>
+                                <button class="btn-little-less-black">-</button>
                             </div>
                             <div class="finance-duties-self">
                                 <input class="checkbox" type="checkbox">
                                 <p>Duty 1</p>
-                                <button class="btn-little-less">-</button>
+                                <button class="btn-little-less-black">-</button>
                             </div>
                             <div class="finance-duties-self">
                                 <input class="checkbox" type="checkbox">
                                 <p>Duty 1</p>
-                                <button class="btn-little-less">-</button>
+                                <button class="btn-little-less-black">-</button>
                             </div>
                             <div class="finance-duties-self">
                                 <input class="checkbox" type="checkbox">
                                 <p>Duty 1</p>
-                                <button class="btn-little-less">-</button>
+                                <button class="btn-little-less-black">-</button>
                             </div>
                         </div> 
                     </div>
