--- a/finance.html
+++ b/finance.html
@@ -485,31 +485,95 @@
                             
                         </div> 
                         <div id="finance-duties" class="finance-page">
-                            <div class="finance-duties-self">
-                                <input class="checkbox" type="checkbox">
-                                <p>Duty 1</p>   
-                                <button class="btn-little-less-black">-</button>
+                            <form class="finance-duties-content">
+                                <div class="finance-duties-all">
+                                    <div>
+                                        <div class="finance-duties-self">
+                                            <input class="checkbox" type="checkbox">
+                                            <p>Duty 1</p>   
+                                            <button class="btn-little-less-black">-</button>
+                                        </div>
+                                        <div class="finance-duties-self">
+                                            <input class="checkbox" type="checkbox">
+                                            <p>Duty 1</p>
+                                            <button class="btn-little-less-black">-</button>
+                                        </div>
+                                        <div class="finance-duties-self">
+                                            <input class="checkbox" type="checkbox">
+                                            <p>Duty 1</p>
+                                            <button class="btn-little-less-black">-</button>
+                                        </div>
+                                        <div class="finance-duties-self">
+                                            <input class="checkbox" type="checkbox">
+                                            <p>Duty 1</p>
+                                            <button class="btn-little-less-black">-</button>
+                                        </div>
+                                        <div class="finance-duties-self">
+                                            <input class="checkbox" type="checkbox">
+                                            <p>Duty 1</p>
+                                            <button class="btn-little-less-black">-</button>
+                                        </div>
+                                        <div class="finance-duties-self">
+                                            <input class="checkbox" type="checkbox">
+                                            <p>Duty 1</p>
+                                            <button class="btn-little-less-black">-</button>
+                                        </div>
+                                        <div class="finance-duties-self">
+                                            <input class="checkbox" type="checkbox">
+                                            <p>Duty 1</p>
+                                            <button class="btn-little-less-black">-</button>
+                                        </div>
+                                        <div class="finance-duties-self">
+                                            <input class="checkbox" type="checkbox">
+                                            <p>Duty 1</p>
+                                            <button class="btn-little-less-black">-</button>
+                                        </div>
+                                        <div class="finance-duties-self">
+                                            <input class="checkbox" type="checkbox">
+                                            <p>Duty 1</p>
+                                            <button class="btn-little-less-black">-</button>
+                                        </div>
+                                        <div class="finance-duties-self">
+                                            <input class="checkbox" type="checkbox">
+                                            <p>Duty 1</p>
+                                            <button class="btn-little-less-black">-</button>
+                                        </div>
+                                        <div class="finance-duties-self">
+                                            <input class="checkbox" type="checkbox">
+                                            <p>Duty 1</p>
+                                            <button class="btn-little-less-black">-</button>
+                                        </div>
+                                        <div class="finance-duties-self">
+                                            <input class="checkbox" type="checkbox">
+                                            <p>Duty 1</p>
+                                            <button class="btn-little-less-black">-</button>
+                                        </div>
+                                        <div class="finance-duties-self">
+                                            <input class="checkbox" type="checkbox">
+                                            <p>Duty 1</p>
+                                            <button class="btn-little-less-black">-</button>
+                                        </div>
+                                        <div class="finance-duties-self">
+                                            <input class="checkbox" type="checkbox">
+                                            <p>Duty 1</p>
+                                            <button class="btn-little-less-black">-</button>
+                                        </div>
+                                        <div class="finance-duties-self">
+                                            <input class="checkbox" type="checkbox">
+                                            <p>Duty 1</p>
+                                            <button class="btn-little-less-black">-</button>
+                                        </div>
+
+                                    </div>
+                                    <div class="btn-add-dutie">
+                                        <button type="button" class="btn-add">Add</button>
+                                    </div>  
+                                </div>
+                                <div class="finance-duties-save">
+                                    <button type="submit" class="btn-save">Save</button>
+                                </div>
                             </div>
-                            <div class="finance-duties-self">
-                                <input class="checkbox" type="checkbox">
-                                <p>Duty 1</p>
-                                <button class="btn-little-less-black">-</button>
-                            </div>
-                            <div class="finance-duties-self">
-                                <input class="checkbox" type="checkbox">
-                                <p>Duty 1</p>
-                                <button class="btn-little-less-black">-</button>
-                            </div>
-                            <div class="finance-duties-self">
-                                <input class="checkbox" type="checkbox">
-                                <p>Duty 1</p>
-                                <button class="btn-little-less-black">-</button>
-                            </div>
-                            <div class="finance-duties-self">
-                                <input class="checkbox" type="checkbox">
-                                <p>Duty 1</p>
-                                <button class="btn-little-less-black">-</button>
-                            </div>
+                            
                         </div> 
                     </div>
 
